<resources>
    <string name="app_name">Longboard Life</string>
    <string name="title_activity_board">BoardActivity</string>
    <string name="change">Change</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="griptape">Griptape:</string>
    <string name="bushings_road">Bushings (Road):</string>
    <string name="bushings_board">Bushings (Board):</string>
    <string name="default_50">Default: 50</string>
    <string name="_50">50</string>
    <string name="rear_angle">Rear Angle:</string>
    <string name="front_angle">Front Angle:</string>
    <string name="advance_mode">Advance Mode</string>
    <string name="deck">Deck</string>
    <string name="name">Name</string>
    <string name="from_gallery">From Gallery</string>
    <string name="from_camera">From Camera</string>
    <string name="avg_mph">Avg MPH</string>
    <string name="total_miles">Total Miles</string>
    <string name="_00_0">00.0</string>
    <string name="statistics">Statistics</string>
    <string name="distance_ridden">Distance Ridden:</string>
    <string name="parts">Parts</string>
    <string name="zenit_mini_marble">Zenit Mini Marble</string>
    <string name="grip">Grip:</string>
    <string name="lokton">Lokton</string>
    <string-array name="trucks">
        <item>Generic</item>
        <item>Paris V3</item>
        <item>Paris Savants</item>
        <item>Bear Gen6</item>
        <item>Bear Gen5 (vintage)</item>
        <item>Valkyries</item>
        <item>Caliber 2</item>
        <item>Caliber 3</item>
        <item>Roja 2020s</item>
        <item>Randalls</item>
        <item>Sidewinders</item>
        <item>Seismic Aeon</item>
        <item>Arsenals</item>
        <item>Valkyries</item>
        <item>Rogues</item>
    </string-array>
    <string name="paris_v3">Paris V3</string>
    <string name="angle_front">Angle (front):</string>
    <string name="angle_rear">Angle (rear):</string>
    <string name="_50_xb0">50°</string>
    <string name="riptide_88a_wps_barrel">Riptide 88a WPS Barrel</string>
    <string name="pivot">Pivot:</string>
    <string-array name="wheels">
        <item>Generic</item>
        <item>Snakes</item>
        <item>G Slides</item>
        <item>BO Smokes</item>
        <item>BO Liam Morgan Pro</item>
        <item>Fatty Hawgs</item>
        <item>Chubby Hawgs</item>
        <item>Supreme Hawgs</item>
        <item>Biggie Hawgs</item>
        <item>Speed Vents</item>
        <item>EZ Hawgs</item>
        <item>Markers</item>
        <item>Nine Balls</item>
        <item>PHAT BOYZ</item>
        <item>4President</item>
        <item>Stimulus</item>
        <item>Skiffs</item>
        <item>Fat Frees</item>
        <item>Kegels</item>
        <item>Caguama</item>
        <item>Harlot</item>
    </string-array>
    <string-array name="bearings">
        <item>Generic</item>
        <item>Bones Reds</item>
        <item>Beasto</item>
        <item>Oust</item>
        <item>Space Balls</item>
        <item>Juhu V2</item>
        <item>Zealous</item>
        <item>Zealous (Ceramic)</item>
    </string-array>
    <string name="edit_setup">Edit Setup</string>
    <string name="recent_sessions">Recent Sessions</string>
    <string name="delete_board">Delete Board</string>
    <string name="record_session">Record Session</string>
    <string name="durations">Durations</string>
    <string name="distances">Distances</string>
    <string name="top_speeds">Top Speeds</string>
    <string name="average_speeds">Average Speeds</string>
    <string name="favorite_board">Favorite Board</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="average_distance">Average Distance:</string>
    <string name="total_distance">Total Distance:</string>
    <string name="_00_0_miles">00.0 Miles</string>
    <string name="furthest_distance">Furthest Distance:</string>
    <string name="average_speed">Average Speed:</string>
    <string name="_00_0_mph">00.0 MPH</string>
    <string name="fastest_speed">Fastest Speed:</string>
    <string name="just_another_awesome_skater">No Description</string>
    <string name="john_doe">Unknown</string>
    <string name="bushing_calculator">Bushing Calculator</string>
    <string name="weight_lbs">Weight (lbs)</string>
    <string name="cruising">Cruising</string>
    <string name="freeride_downhill">Freeride/Downhill</string>
    <string name="calculate">Calculate</string>
    <string name="recommended_durometer_00a">Recommended Durometer: 00a</string>
    <string name="based_on_venom_hpf_formula">Based on Venom HPF Formula</string>
    <string name="go_a_step_softer_roadside_for_better_carving_or_go_a_step_up_boardside_for_less_slop">Go a step softer roadside for better carving. Or go a step up boardside for less slop</string>
    <string name="create_board">Create Board</string>
    <string name="plus_sign">+</string>
    <string name="boards_used">Boards Used:</string>
    <string name="add_board">Add Board</string>
    <string name="city">City:</string>
    <string name="fort_myers">Fort Myers</string>
    <string name="top_speed">Top Speed:</string>
    <string name="_20_mph">20 MPH</string>
    <string name="duration">Duration:</string>
    <string name="_0_0_hours">0.0 hours</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="_12_00pm">12:00pm</string>
    <string name="delete_session">Delete Session</string>
    <string name="profile">Profile</string>
    <string name="boards">Boards</string>
    <string name="sessions">Sessions</string>
    <string name="news">News</string>
    <string name="map">Map</string>
    <string name="calculator">Calculator</string>
    <string name="settings">Settings</string>
    <string name="muirskate_title">Longboard Shop</string>
    <string name="discord_title">Longboarding Family Discord</string>
    <string name="github_title">Source Code on GitHub</string>
    <string name="sources_title">News Sources</string>
    <string name="downhill254_title">DownHill254</string>
    <string name="longboardbrand_title">LongboardBrand Blog</string>
    <string name="darktheme_sum">Will otherwise follow system settings. Restart app to take effect</string>
    <string name="github_sum">View the source code to the app hosted on GitHub, and maybe even contribute!</string>
    <string name="discord_sum">Join the longboarding family discord server, the best community to meet others</string>
    <string name="muirskate_sum">Go to Muirskate.com the best place to order anything for Longboarding</string>
    <string name="no_favorite">No Favorite</string>
    <string name="speed">Speed</string>
    <string name="miles"> Miles</string>
    <string name="mph"> MPH</string>
    <string name="poll_rate_sum">How quickly should location be updated when recording a session. Lower is faster but more power draw and significantly more storage. Recommended is 3500</string>
    <string name="poll_rate_title">Location Polling Rate (Milliseconds)</string>
    <string name="recording_session">Recording Session</string>
    <string name="no_news">No news</string>
    <string name="recommended_durometer">Recommended Durometer: </string>
    <string name="recommended_shape">Recommended Shape: </string>
    <string name="need_weight">Please input a weight</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="no_sessions">No Sessions Recorded</string>
    <string name="click_to_stop">Click here to stop recording</string>
    <string name="start">START</string>
    <string name="recording_disclaimer">For best tracking, disable power saving mode as well as battery optimizations</string>
    <string name="record_dialog_title">Start Session?</string>
    <string name="not_enough_data">Not enough data recorded to save</string>
    <string name="notification_description">Recording your data for you to later view</string>
    <string name="failed_news">Failed to load News</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="add_tag">Add Tag</string>
    <string name="finish">Finish</string>
    <string name="no_boards">No Boards Saved</string>
    <string name="thank_you_content">Thank you for downloading the app! But this app is still in it\'s early stages and please note many more features are to come!</string>
    <string name="thank_you_title">Thank You!</string>
    <string name="went_wrong">Something went wrong</string>
    <string name="no_image_selected">You didn\'t select an image</string>
    <string name="minutes">" Minutes"</string>
    <string name="remove_board_from_session">Remove board from session</string>
    <string name="apply">Apply</string>
    <string name="level_1">Level: 1</string>
    <string name="level">Level:</string>
    <string name="select_theme">Select Theme</string>
    <string name="kph">KPH</string>
    <string name="kilometer_short">Km</string>
    <string name="achievements">Achievements</string>
    <string name="no_achievement">No Achievements</string>
    <string name="failed_city_name">Failed to determine</string>
    <string name="failed_elevation_server">Failed to load elevation data from server</string>
    <string name="failed_connect_basementskate">Couldn\'t Connect to basementskate</string>
    <string name="failed_connect_longboardbrand">Couldn\'t Connect to longboardbrand</string>
    <string name="failed_connect_downhill254">Couldn\'t Connect to downhill254</string>
    <string name="cruise_shape">Cone/Cone, Cone/Barrel</string>
    <string name="freeride_shape">Barrel/Barrel</string>
    <string name="board_needs_name">The board needs at at least a name</string>
    <string name="elevation">Elevation</string>
    <string name="free_limit_reached">Free limit reached. Click to upgrade</string>
    <string name="basement_blog_title">Basement Skate Blog</string>
    <string name="distance_0_00_miles">Distance: 0.00 Miles</string>
    <string name="click_on_two_points_on_the_map_to_draw_a_route_and_show_elevation_data">Click on two points on the map to draw a route and show elevation data</string>
    <string name="failed_image">Failed to load image</string>
    <string name="hold_up">Hold up!</string>
    <string name="downhill_title">Downhill Rider</string>
    <string name="downhill_sum">Show elevation data. Uses low accuracy unless premium is purchased due to higher server costs</string>
    <string name="reduce_title">Reduce Charts (Experimental)</string>
    <string name="reduce_sum">Simplifies the amount of data for longer sessions</string>
    <string name="no_save_session">Didn\'t save</string>
    <string name="no_elevation_failed">Couldn\'t get elevation</string>
    <string name="achievements_label">Achievements</string>
    <string name="board_creator_label">Board Creator</string>
    <string name="welcome">Welcome!</string>
    <string name="page_two_title">Starting Off</string>
    <string name="page_two_sum">While you can enter info about your quiver of boards into the app, the main function of the app is recording sessions</string>
    <string name="page_three_title">Profiles</string>
    <string name="page_three_sum">Once you\'re done recording a session, your profile page starts to show a lot more data. Eventually you will be able to see your friends profiles as well</string>
    <string name="page_four_title">Find Hills!</string>
    <string name="page_four_sum">For those that love downhill style riding, there is a section much like findhills.com in the app. This is a subscription based feature like findhills.com, however this app is still maintained and costs less to use</string>
    <string name="premium_required">Premium Required</string>
</resources>