<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_outline_person_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_boards"
        android:icon="@drawable/ic_outline_inventory_2_24"
        android:title="@string/boards" />

    <item
        android:id="@+id/navigation_sessions"
        android:icon="@drawable/ic_outline_whatshot_24"
        android:title="@string/sessions" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_outline_subtitles_24"
        android:title="@string/news" />

    <item
        android:id="@+id/navigation_skatemap"
        android:icon="@drawable/ic_outline_map_24"
        android:title="@string/map" />

</menu>