<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/calculatorLayout"
    android:layout_weight="1"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.theredspy15.thanelocker.ui.mainfragments.calculator.CalculatorFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bushing_calculator"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextWeight"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/weight_lbs"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonCruise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cruising" />

        <RadioButton
            android:id="@+id/radioButtonFreeride"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/freeride_downhill" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        android:text="@string/calculate"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="20dp"
        android:textColor="@color/purple_500"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/recommendedTextView"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommended_durometer_00a" />

    <TextView
        android:id="@+id/basedOnTextView"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/based_on_venom_hpf_formula" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:text="@string/go_a_step_softer_roadside_for_better_carving_or_go_a_step_up_boardside_for_less_slop"
        android:textAlignment="center"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/shapeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/recommended_shape"
        android:textAlignment="center"
        android:visibility="invisible" />

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
</LinearLayout>